# polyai

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  json_to_blob.py  main.py  proxy.py  pyproject.toml  simulation_worker.pyi  train.py
.helix/: languages.toml
replay_viewer/: index.html  main.bundle.js
simulation_worker/: CMakeLists.txt  Makefile
simulation_worker/src/: main.cpp
src/: data_reader.rs  determinism_check.ixx  lib.rs  math.ixx  physics_worker.rs  simulation.rs  world_explorer.rs
src_py/: polytrack.py  replay_viewer.py  reward.py  viewer_process.py
