[package]
name = "simulation_worker"
version = "0.1.0"
edition = "2024"

[lib]
name = "simulation_worker"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
pyo3 = { version = "0.26.0" }
pyo3-stub-gen = "0.19.0"
thiserror = "2.0.18"
wasmtime = "42.0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
