[package]
name = "simulation_worker"
version = "0.1.0"
edition = "2024"

[lib]
name = "simulation_worker"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
pollster = "0.4.0"
wgpu = "28.0.0"
winit = "0.30.13"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
nalgebra = "0.34.1"
parry3d = "0.26.0"
polytrack-codes = "0.3.0"
pyo3 = { version = "0.26.0" }
pyo3-stub-gen = "0.19.0"
thiserror = "2.0.18"
wasmtime = "42.0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
