[build-system]
requires = ["maturin>=1.12.6,<2"]
build-backend = "maturin"

[tool.uv]
package = false # We don't want uv to build the Rust code. We will manually build it with maturin.

[project]
name = "polyai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "black>=26.3.1",
    "websockets>=16.0",
]
